December 01 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected a design flaw in the state system that occasionally caused odd permanent
	  states to be activated
	* The counter of the confuse effect of spoiled items was usually rounded to zero so
	  I increased the effect a bit
	* Esc now works in scroll bar questions
	* Area around Attnam is now revealed when the game begins and gloomy cave's
	  environment is uncovered when the Elpuri quest is given
	* Chameleon added to char.pcx by Kahvi
	* Better helmet added to item.pcx by Kahvi and slightly made smaller by me
	* Snake's agility decreased

December 01 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* quit key changed from q to Q
	
November 30 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Mommos don't leave corpses but just slime.
	* Fixed effect for Loricatus.

November 30 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Decreased exp gain for being burdened/stressed
	* Decresed endurance exp rate
	* Loricatus now gives a steel hand instead of a mithril arm and Cruentus an iron one
	  instead of a steel one
	* Fainting from kobold flesh works again
	* The game no longer crashes if character wearing a ring of infravision is polymorphed
	* If needed, the game now asks whether the player wants to wield a weapon which he is
	  too weak to use
	* Inventory entries of weapons and shields are now more informative
	* Gravel, moraine, grass and school food can no longer be wished
	* Integrated Kahvi's new chest pictures
	* Corrected a bug that sometimes allowed small spoiled corpses to trigger a permanent
	  confused state

November 30 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Some bones and skulls added to the enner beast level
	* Skulls severed from skeletons no longer weight eight kilograms
	* A dying skeleton now always drops a skull if it has a head
	* Removed the ambient light of Attnam
	* Added 100 bananas to Hulbo's shop